# hsk-mock-test

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  hsk_universal_dataset.json  hsk_universal_dataset_plain.txt  pyproject.toml
.github/workflows/: ci.yml
hsk/: __init__.py  __main__.py  cli.py  constants.py  data_engine.py  models.py  test_engine.py
hsk/data/: level_1.json  level_2.json  level_3.json  level_4.json  level_5.json  level_6.json  level_9.json  radicals.json
scripts/: analyze_sentence_lengths.py  audit_coverage.py  audit_duplicates.py  audit_level_9.py  audit_levels.py  evaluate_with_gemini.py  generate_hsk9_report.py  generate_universal_hsk_dataset.py  ingest_data.py  qa_dataset.py  simulate_exam.py  verify_exam_config.py  verify_v10.py  verify_v11.py  verify_v12.py  verify_v13.py  verify_v17.py  verify_v8.py  verify_writing.py
tests/: test_data_engine.py  test_engine.py  test_hsk.py
