[project]
name = "hsk"
version = "0.1.0"
description = "HSK application"
authors = [
    {name = "Joe Romani",email = "joseph.romani@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (<9.0)"
]
